update readmemd & Dockerfile