@@ -20,5 +20,5 @@ RUN echo "eula=true" > eula.txt
 # Expose the default Minecraft server port
 EXPOSE 25565
 
-# Start the server
-CMD ["java", "-Xmx1024M", "-Xms1024M", "-jar", "paperclip.jar", "--nogui"]
+# Start the server with optimized flags
+CMD ["java", "-Xms12288M", "-Xmx12288M", "--add-modules=jdk.incubator.vector", "-XX:+UseG1GC", "-XX:+ParallelRefProcEnabled", "-XX:MaxGCPauseMillis=200", "-XX:+UnlockExperimentalVMOptions", "-XX:+DisableExplicitGC", "-XX:+AlwaysPreTouch", "-XX:G1HeapWastePercent=5", "-XX:G1MixedGCCountTarget=4", "-XX:InitiatingHeapOccupancyPercent=15", "-XX:G1MixedGCLiveThresholdPercent=90", "-XX:G1RSetUpdatingPauseTimePercent=5", "-XX:SurvivorRatio=32", "-XX:+PerfDisableSharedMem", "-XX:MaxTenuringThreshold=1", "-Dusing.aikars.flags=https://mcflags.emc.gs", "-Daikars.new.flags=true", "-XX:G1NewSizePercent=40", "-XX:G1MaxNewSizePercent=50", "-XX:G1HeapRegionSize=16M", "-XX:G1ReservePercent=15", "-jar", "paperclip.jar", "--nogui"]
